@@ -13,9 +13,27 @@
 </tr>
 </table>
 <p>
+2003-02-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Add optimized support for
+        reading tiled TIFFs.
+
+</UL>
+<p>
+2003-02-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Optimize RGBA transfer loop.
+
+</UL>
+<p>
 2003-02-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/render.c (DrawPrimitive): Return DrawPolygonPrimitive
+        status (edit transferred from ImageMagick).
+
   <LI> magick/utility.c (GetMagickGeometry): Scaling to an area now
         preserves the image aspect ratio.
 
